web/src/assets/css/Home/IssueTable.css
.IssueTable {
    background-color: #3B3B3F;
    width: 90%;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 4px;
}

.green {
    background-color: rgba(0, 188, 79, 0.3);
    color: #00BC4F;
    border: none;
    margin: 0;
}

.orange {
    background-color: rgba(240, 145, 73, 0.3);
    color: #F09149;
    border: none;
    margin: 0;
}

.red {
    background-color: rgba(240, 73, 73, 0.3);
    color: #F04949;
    border: none;
    margin: 0;
}

.tableName h3 {
    color: #FFF !important;
    margin: 0;
}

.tableContainer {
    display: flex;
    max-width: 100%;
    flex-direction: column;
    padding: 40px;
    margin: auto;
}

.tableData {
    margin-top: 1em;
}

.ant-table-thead>tr>th {
    background: #2F2E31 !important;
    color: #FFF !important;
    text-align: center !important;
}

.ant-table-tbody>tr>td {
    background: #3B3B3F !important;
    color: #FFF !important;
    height: 2em;
    padding: 0 !important;
}

tr {
    text-align: center;
}

.ant-table-thead>tr>th:nth-child(5),
.ant-table-tbody>tr>td:nth-child(5) {
    width: 30% !important;
}

@media only screen and (max-width: 950px) {

    .ant-table-thead>tr>th,
    .ant-table-tbody>tr>td {
        padding: 0 !important;
    }
}

.ant-table-tbody>tr:hover>td {
    background: #2F2E31 !important;
    cursor: pointer;
}

